<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="@dimen/elements_bottom_margin"
        android:layout_marginTop="100dp"
        android:text="@string/ip_address"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="@dimen/elements_bottom_margin"
        android:layout_marginTop="100dp"
        android:text="@string/port"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editText_udp_ip_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="@dimen/elements_bottom_margin"
        android:digits="0123456789."
        android:ems="10"
        android:inputType="number"
        android:maxLength="15" />

    <EditText
        android:id="@+id/editText_udp_port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="@dimen/elements_bottom_margin"
        android:ems="5"
        android:inputType="number"
        android:maxLength="5" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_udp_ip_address"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="@dimen/elements_bottom_margin"
        android:text="@string/send_as"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView3"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="@dimen/elements_bottom_margin"
        android:layout_toRightOf="@+id/textView3"
        android:gravity="right"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButton_udp_bytes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/bytes" />

        <RadioButton
            android:id="@+id/radioButton_udp_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="@dimen/elements_bottom_margin"
        android:layout_marginBottom="@dimen/elements_bottom_margin"
        android:text="@string/message"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editText_udp_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="@dimen/elements_bottom_margin" />

    <!--
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/udp_message_instructions"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="italic" />


    <CheckBox
        android:id="@+id/checkBox_udp_hex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/hex" />

    <CheckBox
        android:id="@+id/checkBox_udp_expect_reply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_toLeftOf="@id/checkBox_udp_hex"
        android:text="@string/expect_reply" />
    -->

    <ImageButton
        android:id="@+id/imageButton_udp_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_udp_message"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/ic_action_send_now"
        android:minWidth="50dp"
        android:minHeight="50dp" />

</RelativeLayout>
